--- a/style.css
+++ b/style.css
@@ -55,8 +55,6 @@ table {
     height: 120px;
     background: transparent url('car-textures/VAZ2105.png') center / cover no-repeat;
     position: absolute;
-    left: 125px;
-    bottom: 10px;
 }
 
 .gameArea {
@@ -74,4 +72,37 @@ table {
     height: 50px;
     background: #fff;
     left: 145px;
+}
+
+.start {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 2rem 0;
+    text-align: center;
+    z-index: 200;
+    color: #fff;
+    font-size: 1.5rem;
+    background: #000;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: 700;
+    border: none;
+}
+
+.score {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #000;
+    padding: 1rem 0;
+    z-index: 200;
+    font-size: 1.5rem;
+    color: skyblue;
+    text-align: center;
+    font-family: sans-serif;
+    font-weight: 500;
 }
